k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smile-app
  labels:
    name: smile-app
